templates/keycloak/keycloak-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-manager.io/issuer-kind: Issuer
    cert-manager.io/issuer-name: ${VAR_CERT_ISSUER}
  name: keycloak-route
  namespace: ${VAR_KEYCLOAK_NAMESPACE}
spec:
  host: keycloak.apps.${VAR_CLUSTER_DOMAIN}
  tls:
    termination: reencrypt
    certificate: ""
    key: ""
    caCertificate: ""
    destinationCACertificate: ""
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: keycloak
